Switched to java 8